syntax = "proto3";

package v1;

option go_package = "./v1;v1";

service Greeter {
  // create a record
  rpc Create(CreateGreeterRequest) returns (CreateGreeterReply) {}
  // delete a record by id
  rpc DeleteByID(DeleteGreeterByIDRequest) returns (DeleteGreeterByIDReply) {}
  // update a record by id
  rpc UpdateByID(UpdateGreeterByIDRequest) returns (UpdateGreeterByIDReply) {}
  // get a record by id
  rpc GetByID(GetGreeterByIDRequest) returns (GetGreeterByIDReply) {}
  // list of records by parameters
  rpc List(ListGreeterRequest) returns (ListGreeterReply) {}
  rpc ListByIDs(ListGreeterRequest) returns (ListGreeterReply) {}
}

message CreateGreeterRequest {
  string name = 1; // name
  string email = 2; // email address
  string password = 3; // password
}

message CreateGreeterReply {
  uint64   id = 1;
}

message DeleteGreeterByIDRequest {
  uint64   id = 1;
}

message DeleteGreeterByIDReply {

}

message UpdateGreeterByIDRequest {
  uint64   id = 1;
  string name = 2;
  string email = 3;
}

message UpdateGreeterByIDReply {

}

message GreeterInfo {
  uint64   id = 1;
  string name = 2;
  string email = 3;
  bool    active = 4;
}

message GetGreeterByIDRequest {
  uint64   id = 1;
}

message GetGreeterByIDReply {
  GreeterInfo userExample = 1;
}

message ListGreeterRequest {
  Params params = 1;
}

message ListGreeterReply {
  int64 total =1;
  repeated GreeterInfo userExamples = 2;
}

message Params {
  int32 page = 1;
  int32 limit = 2;
  string sort = 3;
}

service Foo {
  rpc Create(CreateFooRequest) returns (CreateFooReply) {}
  rpc GetByID(GetFooByIDRequest) returns (GetFooByIDReply) {}
  rpc DeleteByID(GetFooByIDRequest) returns (GetFooByIDReply) {}
}

message CreateFooRequest {
  string name = 1;
}

message CreateFooReply {
   int64 id = 1;
}

message GetFooByIDRequest {
  repeated uint64   ids = 1;
}

message GetFooByIDReply {
  string name = 1;
}
